# nectarDashboard2.0

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FRONTEND_HANDOFF.md  FRONTEND_HANDOFF_PERMISSIONS.md  INTEGRATIONS.md  LIGHTSAIL_SINGLE_INSTANCE.md  LOCAL_DEV.md  README.md  TASKS.md  alembic.ini  auth.py  build.sh  check_data.py  config.py  crud.py  database.py  deploy.sh  docker-compose.yml  feilds.txt  init-db.sql  log.txt  main.py  main.py.md  nano reset_password.py  nginx-ssl.conf  nginx.conf  provision-ssl.sh  pyproject.toml  pytest_output.txt  requirements.txt  schemas.py  security.py  seed_defaults.py  summary.md  sync_test.py  sync_to_wordpress.py  test-api.html
alembic/: env.py
child/: auth.py  check_clients.py  check_tables.py  check_users.py  config.py  crud.py  database.py  dependencies.py  integrations.py  main.py  main_backup.py  main_old.py  middleware.py  migrate_clients.py  pyproject.toml  requirements.txt  schemas.py  security.py  seed_clients.py  seed_defaults.py  sync_to_wordpress.py
child/adapters/: __init__.py  base.py  registry.py  wordpress.py
child/alembic/: env.py
frontend/: Dockerfile  index.html  package.json  playwright.config.ts  ts-errors.txt  tsconfig.json  vite.config.ts  vitest.config.ts
parent/: .env.example  Dockerfile  __init__.py  alembic.ini  cert_manager.py  check_client_site_db.py  check_db.py  check_parent_db.py  check_users.py  client_site_middleware.py  client_site_service.py  cloudflare_service.py  config.py  create_admin_user.py  create_tables.py  crud.py  database.py  fix_database_schema.py  main.py  (+7 more)
(+108 files in other folders)
